[gd_scene load_steps=2 format=2]

[ext_resource path="res://node/dlg_conf/dlg_conf.gd" type="Script" id=1]

[node name="dlg_conf" type="WindowDialog"]
margin_right = 512.0
margin_bottom = 288.0
popup_exclusive = true
window_title = "Configure"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_capture_image_dir" type="Label" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 132.0
margin_bottom = 96.0
text = "Capture Image Dir"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_edit" type="LineEdit" parent="lbl_capture_image_dir"]
margin_left = 160.0
margin_right = 432.0
margin_bottom = 32.0
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_capture_image_dir" type="Button" parent="lbl_capture_image_dir"]
margin_left = 448.0
margin_right = 480.0
margin_bottom = 32.0
text = "Dir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_capture_scale" type="Label" parent="."]
margin_left = 16.0
margin_top = 112.0
margin_right = 128.0
margin_bottom = 144.0
text = "Capture Scale"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spin_capture_scale" type="SpinBox" parent="lbl_capture_scale"]
margin_left = 160.0
margin_right = 480.0
margin_bottom = 32.0
min_value = 1.0
max_value = 4.0
value = 1.0
align = 1
prefix = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dlg_choose_dir" type="FileDialog" parent="."]
margin_top = 256.0
margin_right = 512.0
margin_bottom = 512.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/Users/shearwater/Documents/workarea/godot-project/edge_detect_shader/proj"
current_path = "/Users/shearwater/Documents/workarea/godot-project/edge_detect_shader/proj/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_ok" type="Button" parent="."]
margin_left = 432.0
margin_top = 240.0
margin_right = 496.0
margin_bottom = 272.0
focus_mode = 0
enabled_focus_mode = 0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_capture_screen_ratio" type="Label" parent="."]
margin_left = 16.0
margin_top = 160.0
margin_right = 160.0
margin_bottom = 192.0
text = "Capture Screen Ratio"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_capture_screen_ratio" type="OptionButton" parent="lbl_capture_screen_ratio"]
margin_left = 160.0
margin_right = 480.0
margin_bottom = 32.0
text = "Fixed"
align = 1
items = [ "Fixed", null, false, 0, null, "Match Scale", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_mesh_dir" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 48.0
text = "Mesh Dir"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_edit" type="LineEdit" parent="lbl_mesh_dir"]
margin_left = 160.0
margin_right = 432.0
margin_bottom = 32.0
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_mesh_dir" type="Button" parent="lbl_mesh_dir"]
margin_left = 448.0
margin_right = 480.0
margin_bottom = 32.0
text = "Dir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 208.0
margin_right = 496.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_to_show" from="." to="." method="_on_dlg_conf_about_to_show"]
[connection signal="pressed" from="lbl_capture_image_dir/btn_capture_image_dir" to="." method="_on_btn_capture_image_dir_pressed"]
[connection signal="pressed" from="btn_ok" to="." method="_on_btn_ok_pressed"]
[connection signal="pressed" from="lbl_mesh_dir/btn_mesh_dir" to="." method="_on_btn_mesh_dir_pressed"]
